# AIagent

./: CMakeLists.txt  README.md  build.sh  index.html  main.cpp
cmake/: gen_debian_control.cmake  git.cmake  systemd.cmake  uninstall.cmake
cmake/toolchain/: aarch64.cmake
pack/: CMakeLists.txt
pack/DEBIAN/: postinst.in  postrm.in  preinst.in  prerm.in
pack/templates/: cmake_uninstall.cmake.in  systemd.service.in
